add user profile update functionality and slug-based retrieval